--- a/remix.html
+++ b/remix.html
@@ -1,2 +1,161 @@
-< !DOCTYPE html><html lang="en"><head><meta charset="UTF-8" /><meta name="viewport" content="width=device-width, initial-scale=1.0" /><meta name="description" content="FIKRA — Build on existing intelligence." /><title>FIKRA — Remix</title><link rel="icon" href="favicon.ico" type="image/x-icon" /><link rel="stylesheet" href="style.css" /><link rel="stylesheet" href="shared-nav.css" /><link rel="stylesheet" href="tactical-dash.css" /><link rel="preconnect" href="https://fonts.googleapis.com" /><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin /><link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700;800&display=swap" rel="stylesheet" /></head><body class="fikra-nav-offset"><canvas id="bg-canvas"></canvas><nav class="fikra-nav"><div class="fikra-nav-inner"><a href="index.html" class="fikra-nav-logo"><span class="fikra-logo-text">FIKRA</span><span class="fikra-logo-dot">.</span></a><div class="fikra-nav-divider"></div><div class="fikra-nav-links"><a href="index.html" class="fikra-nav-link" id="snl-feed"><svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="8" y1="6" x2="21" y2="6" /><line x1="8" y1="12" x2="21" y2="12" /><line x1="8" y1="18" x2="21" y2="18" /><line x1="3" y1="6" x2="3.01" y2="6" /><line x1="3" y1="12" x2="3.01" y2="12" /><line x1="3" y1="18" x2="3.01" y2="18" /></svg>Feed </a><a href="profile.html" class="fikra-nav-link" id="snl-profile"><svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2" /><circle cx="12" cy="7" r="4" /></svg>Profile </a><a href="dashboard.html" class="fikra-nav-link" id="snl-dashboard"><svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="3" width="7" height="7" rx="1" /><rect x="14" y="3" width="7" height="7" rx="1" /><rect x="3" y="14" width="7" height="7" rx="1" /><rect x="14" y="14" width="7" height="7" rx="1" /></svg>My Intel </a></div><div class="fikra-nav-right"><button id="theme-toggle" class="fikra-nav-btn" onclick="toggleTheme()" title="Toggle Theme" style="margin-right:8px; width:36px; padding:0; justify-content:center;">🌙</button><a href="org-dashboard.html" class="fikra-nav-btn org-btn">Org Portal</a><a href="admin-dashboard.html" class="fikra-nav-btn admin-btn">Admin</a></div></div></nav><div id="app" class="app-container site-layout"><div class="site-main-content"><section id="remix-screen" class="screen site-screen active" style="opacity: 1;"><canvas id="remix-canvas" style="position:absolute; inset:0; pointer-events:none; z-index:0;"></canvas><div class="remix-header"><a href="index.html" class="remix-close-btn" id="close-remix-btn" title="Close Remix">&times;
-</a><div id="original-poster-badge" class="op-badge">REMIXING @user</div></div><div class="remix-layout"><div class="remix-left"><div id="original-card-anchor"></div><div class="remix-chain"><h4>REMIX CHAIN</h4><div id="remix-tree" class="remix-tree"></div></div></div><div class="remix-right"><div class="remix-input-box"><textarea id="remix-input" placeholder="Build on this idea..."></textarea><div class="remix-input-meta"><span id="remix-char-counter">0 / 200</span><button id="remix-submit-btn" class="remix-go-btn">DROP REMIX</button></div></div></div></div></section></div></div><div id="toast" class="toast"></div><script src="app.js"></script></body></html>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="FIKRA — Build on existing intelligence."
+    />
+    <title>FIKRA — Remix</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="shared-nav.css" />
+    <link rel="stylesheet" href="tactical-dash.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body class="fikra-nav-offset">
+    <canvas id="bg-canvas"></canvas>
+    <nav class="fikra-nav">
+      <div class="fikra-nav-inner">
+        <a href="index.html" class="fikra-nav-logo"
+          ><span class="fikra-logo-text">FIKRA</span
+          ><span class="fikra-logo-dot">.</span></a
+        >
+        <div class="fikra-nav-divider"></div>
+        <div class="fikra-nav-links">
+          <a href="index.html" class="fikra-nav-link" id="snl-feed"
+            ><svg
+              width="14"
+              height="14"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            >
+              <line x1="8" y1="6" x2="21" y2="6" />
+              <line x1="8" y1="12" x2="21" y2="12" />
+              <line x1="8" y1="18" x2="21" y2="18" />
+              <line x1="3" y1="6" x2="3.01" y2="6" />
+              <line x1="3" y1="12" x2="3.01" y2="12" />
+              <line x1="3" y1="18" x2="3.01" y2="18" /></svg
+            >Feed </a
+          ><a href="profile.html" class="fikra-nav-link" id="snl-profile"
+            ><svg
+              width="14"
+              height="14"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            >
+              <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2" />
+              <circle cx="12" cy="7" r="4" /></svg
+            >Profile </a
+          ><a href="dashboard.html" class="fikra-nav-link" id="snl-dashboard"
+            ><svg
+              width="14"
+              height="14"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            >
+              <rect x="3" y="3" width="7" height="7" rx="1" />
+              <rect x="14" y="3" width="7" height="7" rx="1" />
+              <rect x="3" y="14" width="7" height="7" rx="1" />
+              <rect x="14" y="14" width="7" height="7" rx="1" /></svg
+            >My Intel
+          </a>
+        </div>
+        <div class="fikra-nav-right">
+          <button
+            id="theme-toggle"
+            class="fikra-nav-btn"
+            onclick="toggleTheme()"
+            title="Toggle Theme"
+            style="
+              margin-right: 8px;
+              width: 36px;
+              padding: 0;
+              justify-content: center;
+            "
+          >
+            🌙</button
+          ><a href="org-dashboard.html" class="fikra-nav-btn org-btn"
+            >Org Portal</a
+          ><a href="admin-dashboard.html" class="fikra-nav-btn admin-btn"
+            >Admin</a
+          >
+        </div>
+      </div>
+    </nav>
+    <div id="app" class="app-container site-layout">
+      <div class="site-main-content">
+        <section
+          id="remix-screen"
+          class="screen site-screen active"
+          style="opacity: 1"
+        >
+          <canvas
+            id="remix-canvas"
+            style="
+              position: absolute;
+              inset: 0;
+              pointer-events: none;
+              z-index: 0;
+            "
+          ></canvas>
+          <div class="remix-header">
+            <a
+              href="index.html"
+              class="remix-close-btn"
+              id="close-remix-btn"
+              title="Close Remix"
+              >&times;
+            </a>
+            <div id="original-poster-badge" class="op-badge">
+              REMIXING @user
+            </div>
+          </div>
+          <div class="remix-layout">
+            <div class="remix-left">
+              <div id="original-card-anchor"></div>
+              <div class="remix-chain">
+                <h4>REMIX CHAIN</h4>
+                <div id="remix-tree" class="remix-tree"></div>
+              </div>
+            </div>
+            <div class="remix-right">
+              <div class="remix-input-box">
+                <textarea
+                  id="remix-input"
+                  placeholder="Build on this idea..."
+                ></textarea>
+                <div class="remix-input-meta">
+                  <span id="remix-char-counter">0 / 200</span
+                  ><button id="remix-submit-btn" class="remix-go-btn">
+                    DROP REMIX
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
+    </div>
+    <div id="toast" class="toast"></div>
+    <script src="app.js"></script>
+  </body>
+</html>
